cluster/apps/tools/whoami/whoami-deployment.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: whoami
  namespace: tools
spec:
  selector:
    app: whoami
  ports:
  - name: http
    port: 80

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: tools
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      nodeSelector:
        node-type: worker
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
