cluster/apps/tools/whoami/whoami-ingressroute.yaml
# whoami-local-ingressroute
# whoami-http-ingressroute
# whoami-https-ingressroute
# whoami-middleware-redirect-scheme
# whoami-middleware-basicauth
# whoami-middleware-headers
# whoami-middleware-authelia

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-local-ingressroute
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: whoami
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http-ingressroute
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: whoami-middleware-redirect-scheme
      services:
        - name: whoami
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https-ingressroute
  namespace: tools
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-dns01-staging-do"
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        # - name: whoami-middleware-basicauth
        # - name: whoami-middleware-headers
        - name: whoami-middleware-authelia
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-redirect-scheme
  namespace: tools
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-basicauth
  namespace: tools
spec:
  basicAuth:
    secret: whoami-secret-basicauth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-headers
  namespace: tools
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    # stsSeconds: 63072000
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://whoami.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
    customFrameOptionsValue: SAMEORIGIN

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-authelia
  namespace: tools
spec:
  forwardAuth:
    address: http://authentication-system-authelia.authentication-system.svc.cluster.local:9091/api/verify?rd=https://auth.${SECRET_DIGITALOCEAN_DOMAIN_02}
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
