cluster/apps/tools/whoami/whoami.yaml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: whoami

---
kind: Service
apiVersion: v1
metadata:
  name: whoami
  namespace: tools
spec:
  selector:
    app: whoami
  ports:
  - name: http
    port: 80

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: tools
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http-ingressroute
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}`)
      kind: Rule
      middlewares:
        - name: whoami-middleware-redirect-scheme
      services:
        - name: whoami
          port: 80

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: whoami-https-ingressroute
#   namespace: tools
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-dns01-staging-do"
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}`)
#       kind: Rule
#       middlewares:
#         #- name: whoami-middleware-headers
#         - name: whoami-middleware-basicauth
#       services:
#         - name: whoami
#           port: 80
#   tls:
#     secretName: whoami-letsencrypt-staging-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https-ingressroute
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}`)
      kind: Rule
      middlewares:
        - name: whoami-middleware-headers
        - name: whoami-middleware-basicauth
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-redirect-scheme
  namespace: tools
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-headers
  namespace: tools

spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 63072000
    #customRequestHeaders:
      #X-Frame-Options: "SAMEORIGIN"
    #customFrameOptionsValue: "SAMEORIGIN"
    #contentSecurityPolicy: "frame-ancestors 'self' whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}"
    #contentSecurityPolicy: "default-src 'self'; script-src https://whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}"
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      #- "https://*.${SECRET_DIGITALOCEAN_DOMAIN_01}"
      - "https://whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-basicauth
  namespace: tools
spec:
  basicAuth:
    secret: whoami-secret-basicauth
